--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <h1>Selecione o Simulador</h1>
+    <h1>Selecione o Simulado</h1>
     
     <select id="simuladoSelect">
         <option value="#">Selecione um simulado</option>
